<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.htf.hello.HtfFirstDemo"
    tools:showIn="@layout/activity_htf_first_demo">

    <TextView
        android:id="@+id/txvHello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/txvWelcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txvHello"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#00FF00"
        android:textSize="30dp" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/btn_change" />

    <LinearLayout
        android:id="@+id/lnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/txvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="Number" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:hint="@string/edt_hint" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCheck"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_check" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dialog Activity"
        android:id="@+id/btnDialogActivity"
        android:layout_marginTop="82dp"
        android:layout_below="@+id/btnCheck"
        android:layout_toLeftOf="@+id/btnCheck"
        android:layout_toStartOf="@+id/btnCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sub Activity"
        android:id="@+id/btnSubActivity"
        android:layout_alignTop="@+id/btnDialogActivity"
        android:layout_toRightOf="@+id/btnCheck"
        android:layout_toEndOf="@+id/btnCheck" />

</RelativeLayout>
